# famp

./: README.md  TODO.md  config.yaml  famp  main.py  pyproject.toml  test.py
docs/: nodriver-asyncio-problem.md  poc_specification.md  product_requirements.md
docs/example/: account_isolation.py  cookie_example.py  demo.py  plugin_system.py
docs/pocs/: test.py
famp/: __init__.py  cli.py  plugin.py  workflow.py
famp/cli/: __init__.py  account.py  plugin.py  utils.py  workflow.py
famp/core/: __init__.py  account.py  browser.py  config.py  context.py  logging.py
famp/plugins/: __init__.py
famp/plugins/feed_scroller/: __init__.py  main.py
famp/plugins/login/: __init__.py  main.py
famp/plugins/manual_login/: __init__.py  main.py  test_plugin.py
famp/plugins/post_publisher/: __init__.py  main.py
plugins/another_plugin/: __init__.py  main.py
plugins/browser_test/: __init__.py  main.py
plugins/login/: main.py
plugins/manual_login/: README.md  main.py
plugins/test/: __init__.py  main.py
spec/: README.md  famp-plugin-enhancement-spec.txt  refactor.yml  standard_template.yml
specs/: famp-implementation-spec.md  famp-spec-template.md
tests/: __init__.py  conftest.py  test_browser.py  test_login_plugin.py  test_workflow.py
